Fix a bug in which emoticons can appear in URLs in messages, by swapping the order of processing

BUG: 278790

Reviewed by: David Edmundson